--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-streamlit 
-pandas
-numpy
-scikit-learn==1.5.0  
-xgboost
-lightgbm
-catboost
-matplotlib
-seaborn
-scify
+streamlit==1.27.0
+pandas==2.1.1
+numpy==1.26.4
+scikit-learn==1.3.3
+matplotlib==3.8.1
+seaborn==0.12.2
+
